# vector-databases-course

self-learning/: app.py  chroma_emb.py  chroma_openai_emb.py  chroma_persist.py  chunk_demo.py  documents.json  lang_test.py  overlap_example.py  pyproject.toml  raw_emb.py  vector_db_llm.py  vector_db_llm_lang_chain.py  vector_db_llm_lang_chain_with_internet_search.py  vector_db_llm_lang_chain_with_internet_search_reactagent.py
